Closed Bug 683745 Opened 15 years ago Closed 15 years ago

Fix OGL FPS Counter on Android

Categories

(Core :: Graphics, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: BenWa, Assigned: BenWa)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Summary: Fix OGL FPS Counter → Fix OGL FPS Counter on Android
Attached patch patch + cspace fix (obsolete) — Splinter Review
Attachment #557341 - Flags: review?(jmuizelaar)
Attachment #557341 - Flags: review?(jmuizelaar) → review+
You should look at using AddBoolVarCache so that this setting can be live.
Attachment #557341 - Attachment is obsolete: true
Attachment #557352 - Flags: review?(jmuizelaar)
Comment on attachment 557352 [details] [diff] [review] AddBoolVarCache version use s instead of g
Attachment #557352 - Flags: review?(jmuizelaar) → review+
Assignee: nobody → bgirard
Whiteboard: [inbound]
Status: NEW → RESOLVED
Closed: 15 years ago
OS: Mac OS X → Android
Hardware: x86 → ARM
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: