Bug 683745 - Fix OGL FPS Counter on Android; r=jrmuizel